# FastGAN-pytorch

./: .gitignore  eval.py  generate.ipynb  models.py  pyproject.toml
notebooks/: generate.ipynb
scripts/: find_nearest_neighbor.py  style_mix.py  train.py  train_backtracking_all.py  train_backtracking_one.py
src/fastgan/: __init__.py  models.py  operation.py
src/fastgan/lpips/: __init__.py  base_model.py  dist_model.py  networks_basic.py  utils.py
src/fastgan/models/: __init__.py  default.py  discriminator.py  ffhq.py  utils.py
