[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fastgan"
version = "0.0.1"
authors = [
  { name="Hugo Berard", email="berard.hugo@gmail.com" },
]
description = "An implementation of FastGAN in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
  "simple_parsing",
  "PyYAML",
  "torch",
  "torchvision",
]

[project.urls]
Homepage = "https://github.com/hugobb/FastGAN-pytorch"
Issues = "https://github.com/hugobb/FastGAN-pytorch/issues"